# pgamodel

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
scripts/: analysis.py  blended_picks.py  course_history.py  fetch_field.py  fetch_schedule.py  run_optimizer.py
src/pga_oad/: __init__.py  blend.py  cache.py  client.py  kalshi.py  models.py  optimizer.py  proprietary.py  subscriptions.py
src/pga_oad/api/: app.py  auth.py  deps.py
src/pga_oad/api/routes/: __init__.py  analytics.py  markets.py  picks.py  users.py
src/pga_oad/db/: __init__.py  crud.py  engine.py  models.py
src/pga_oad/services/: __init__.py  backtest.py  payments.py  tracker.py
tests/: test_auth.py  test_backtest.py  test_client.py  test_db.py  test_subscriptions.py
